--- a/Natours/sass/components/_story.scss
+++ b/Natours/sass/components/_story.scss
@@ -4,10 +4,21 @@
     box-shadow: 0 3rem 6rem rgba($color-black, $alpha: .1);
     background-color: rgba($color-white, .6);
     border-radius: 3px;
-    padding: 6rem;
     font-size: $default-font-size;
+    padding: 6rem;
     padding-left: 9rem;
     transform: skewX(-12deg);
+
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone){
+        transform: skewX(0);
+
+    }
     & > * {
         transform: skewX(12deg);
     }
@@ -21,6 +32,10 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg); // create be like margin
         position:relative; // property to conjugate with figcaption element
+        @include respond(phone){
+            transform: translateX(-3rem) skewX(0);
+    
+        }
     }
     &__img {
         height: 100%;
@@ -29,6 +44,10 @@
     }
     &__text {
         transform: skewX(12deg);
+        @include respond(phone){
+            transform: skewX(0);
+    
+        }
     }
     &__caption {
         position: absolute;
