--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -13,9 +13,9 @@
         clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);   
         height: 95vh;
     }
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),
-    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-    (min-width: 125em) { // Resolution apple screen, the `,` is like `or`
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+        only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+        only screen and (min-width: 125em) { // Resolution apple screen, the `,` is like `or`
         background-image: linear-gradient(
             to right bottom,
             rgba($color-primary-light,0.8),
