--- a/Trillo/css/style.css
+++ b/Trillo/css/style.css
@@ -72,10 +72,14 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
-  background-color: orange;
+  background-color: #ffff;
+  height: 80rem;
   flex: 1; }
 
 .logo {
@@ -152,3 +156,7 @@ body {
     border-radius: 50%;
     margin-left: 1rem;
     margin-right: 1rem; }
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
