--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -113,3 +113,17 @@
 
     }
 }
+////////////////////////////////////////
+/// SIDE NAVIGATION
+.side-nav {
+    &__item {
+
+    }
+    &__link {
+
+    }
+    &__icon {
+        width: 1.75rem;
+        height: 1.75rem;
+    }
+}
