--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -23,10 +23,13 @@
     background-color: var(--color-grey-dark-1);
 
     flex: 0 0 18%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view {
-    background-color: orange;
-
+    background-color: #ffff;
+    height: 80rem;
     flex: 1;
 }
