--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -5,6 +5,11 @@
     box-shadow: var(--shadow-dark);
 
     min-height: 50rem;
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
 .header {
     font-size: 1.4rem;
@@ -18,6 +23,10 @@
 }
 .content {
     display: flex;
+
+    @media only screen and (max-width: $bp-medium) {
+        flex-direction: column;
+    }
 }
 .sidebar {
     background-color: var(--color-grey-dark-1);
@@ -38,6 +47,9 @@
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line);
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem;
+    }
 }
 .description {
     background-color: #ffff;
@@ -45,6 +57,10 @@
     padding: 3rem;
     flex: 0 0 60%;
     margin-right: 4.5rem;
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-right: 3rem;
+    }
 }
 .user-reviews {
     flex: 1;
