--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -15,6 +15,11 @@
     align-items: center;
     justify-content: center;
 
+    @media only screen and (max-width: $bp-smallest) {
+        order: 1;
+        flex: 0 0 100%;
+    }
+
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -175,12 +180,24 @@
             justify-content: center;
             padding: 2rem;
         }
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        }
     }
     &__icon {
         width: 1.75rem;
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+
+        @media only screen and (max-width: $bp-small) {
+            margin: 0;
+            margin-bottom: 7px;
+            width: 1.5rem;
+            height: 1.5rem;
+
+        }
     }
 }
 
@@ -224,6 +241,11 @@
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
 
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
+
     }
     &__stars{
         margin-right: auto;
@@ -255,15 +277,24 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        @media only screen and (max-width: $bp-small) {
+            padding: 0 1.5rem;
+        }
     }
     &__rating-average{
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -3px;
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+        }
     }
     &__rating-count{
         font-size: .8rem;
         text-transform: uppercase;
+        @media only screen and (max-width: $bp-small) {
+            font-size: .5rem;
+        }
     }
 
 }
